Adrian hat nen knall

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=CD0F3C774F957D459AFF3FAF62F3CA83
 ProjectName=Third Person BP Game Template
+bUseBorderlessWindow=False
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
