--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -74,3 +74,37 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/ConcertClient.ConcertClientConfig]
+bIsHeadless=False
+bInstallEditorToolbarButton=True
+bAutoConnect=False
+bRetryAutoConnectOnError=False
+ServerType=Slate
+DefaultServerURL=
+DefaultSessionName=
+DefaultSessionToRestore=
+DefaultSaveSessionAs=
+ReadOnlyAssignment=(GameplayTags=)
+SendOnlyAssignment=(GameplayTags=)
+bShouldPromptForHotReloadOnLevel=False
+ClientSettings=(DisplayName="Bastii",AvatarColor=(R=0.006750,G=1.000000,B=0.840088,A=1.000000),DesktopAvatarActorClass="/ConcertSyncClient/DesktopPresence.DesktopPresence_C",VRAvatarActorClass="/ConcertSyncClient/VRPresence.VRPresence_C",ServerPort=22222,DiscoveryTimeoutSeconds=5,SessionTickFrequencySeconds=1,LatencyCompensationMs=0.000000,bReflectLevelEditorInGame=False,bSupportMixedBuildTypes=False,Tags=,ClientAuthenticationKey="")
+SourceControlSettings=(ValidationMode=Soft)
+EndpointSettings=(bEnableLogging=False,PurgeProcessedMessageDelaySeconds=30,RemoteEndpointTimeoutSeconds=60)
+
+[/Script/UdpMessaging.UdpMessagingSettings]
+EnabledByDefault=True
+EnableTransport=True
+bAutoRepair=True
+MaxSendRate=1.000000
+AutoRepairAttemptLimit=10
+WorkQueueSize=1024
+bStopServiceWhenAppDeactivates=True
+UnicastEndpoint=192.168.2.107:0
+MulticastEndpoint=230.0.0.1:6666
+MessageFormat=CborPlatformEndianness
+MulticastTimeToLive=1
++StaticEndpoints=192.168.178.29:6666
+EnableTunnel=False
+TunnelUnicastEndpoint=
+TunnelMulticastEndpoint=
+
