Bastian com hilfe

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -108,3 +108,6 @@ EnableTunnel=False
 TunnelUnicastEndpoint=
 TunnelMulticastEndpoint=
 
+[/Script/UnrealEd.CookerSettings]
+bCookOnTheFlyForLaunchOn=False
+
